--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "可能不会用到gulp",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,8 +26,12 @@
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.2",
+    "gulp": "^3.9.1",
+    "gulp-watch": "^4.3.8",
+    "gulp-webpack": "^1.5.0",
     "koa": "^1.2.0",
     "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
