--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-watch": "^4.3.8",
     "gulp-webpack": "^1.5.0",
+    "img": "^3.0.3",
     "koa": "^1.2.0",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
     "vue-style-loader": "^1.0.0",
