--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
+    "gulp-file-include": "^1.0.0",
     "gulp-watch": "^4.3.8",
     "gulp-webpack": "^1.5.0",
+    "html-loader": "^0.4.4",
     "img": "^3.0.3",
     "koa": "^1.2.0",
     "koa-router": "^5.4.0",
